--- a/zuoye123/style.css
+++ b/zuoye123/style.css
@@ -47,3 +47,17 @@ container,h2,p{
     margin: 50px;
     text-align: center;
 }
+html{height:100%;}
+body{min-height:100%;margin:0;padding:0;position:relative;}
+
+.header{
+    line-height: 40px;
+    height: 55px;
+    background-color: #ffe4c4;}
+ .main{padding-bottom:200px;background-color: #bdb76b;}
+ .footer{height:150px;margin-top:-100px;background-color: #ffc0cb;}
+footer p{
+    list-style: none;
+    display: inline-block;
+    line-height: 80px;
+}
